<resources>
    <string name="app_name" translatable="false">ReWater</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_networks">Networks</string>
    <string name="navigation_title_devices">Devices</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="navigation_title_settings">Settings</string>
    <string name="navigation_title_settings_license">License</string>
    <string name="navigation_title_devices_add_options">Ways to add</string>
    <string name="navigation_title_devices_add_pair_new">Pair a new device</string>
    <string name="navigation_title_devices_add_pair_new_ble_device">Choose device</string>
    <string name="navigation_title_devices_add_already_paired">Add the already paired</string>
    <string name="navigation_title_devices_info">Device info</string>
    <string name="navigation_title_devices_manual_watering">Manual watering</string>
    <string name="navigation_title_devices_edit">Edit device</string>
    <string name="navigation_title_devices_schedules">Choose schedule</string>
    <string name="navigation_title_devices_add">Setup new device</string>
    <string name="navigation_title_devices_history">Device history</string>
    <string name="navigation_title_networks_add">Add new network</string>
    <string name="navigation_title_networks_edit">Edit network</string>
    <string name="navigation_title_networks_history">Network history</string>
    <string name="navigation_title_schedules">Schedules</string>
    <string name="navigation_title_schedules_add">Create schedule</string>
    <string name="navigation_title_schedules_edit">Edit schedule</string>
    <string name="navigation_title_schedules_devices">Attach devices</string>
    <string name="navigation_title_schedules_history">Schedule history</string>
    <string name="navigation_title_sign_in">Sign In</string>
    <string name="navigation_title_sign_up">Sign Up</string>
    <string name="navigation_title_sign_loading">Loading</string>
    <string name="input_hint_name">Name</string>
    <string name="input_hint_key">Key</string>
    <string name="input_hint_litres">Litres</string>
    <string name="input_hint_millilitres">Millilitres</string>
    <string name="input_hint_description">Description</string>
    <string name="input_hint_days">Days</string>
    <string name="input_hint_hours">Hours</string>
    <string name="input_hint_minutes">Minutes</string>
    <string name="input_hint_username">Username</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_username_or_email">Username or Email</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_wifi_ssid">Wi-Fi network name (SSID)</string>
    <string name="input_hint_wifi_password">Wi-Fi network password</string>
    <string name="input_error_days">The value of days must be an integer from 0 to 99!</string>
    <string name="input_error_hours">The value of hours must be an integer from 0 to 23!</string>
    <string name="input_error_minutes">The value of minutes must be an integer from 0 to 59!</string>
    <string name="input_error_litres">The value of litres must be an integer from 0 to 99!</string>
    <string name="input_error_millilitres">The value of millilitres must be an integer from 0 to 999!</string>
    <string name="input_error_heading_taken">The name is already taken!</string>
    <string name="input_error_heading_overflow">The name is too long!</string>
    <string name="input_error_heading_lack">The name is too short!</string>
    <string name="input_error_key_overflow">The key is too long!</string>
    <string name="input_error_description_overflow">The description is too long!</string>
    <string name="input_error_number_not_found">Please enter an integer number!</string>
    <string name="input_error_username_lack">The username is too short!</string>
    <string name="input_error_password_min_length">The password length must be greater or equal to 6 characters.</string>
    <string name="input_error_password_no_whitespace">The password must contain no whitespace character.</string>
    <string name="input_error_password_digit">The password must contain at least one digit.</string>
    <string name="input_error_password_lower_case">The password must contain at least one lower case character.</string>
    <string name="input_error_password_upper_case">The password must contain at least one upper case character.</string>
    <string name="input_error_water_volume">Could not get the entered values from the water volume input!</string>
    <string name="unit_mouths_short">m</string>
    <string name="unit_days_short">d</string>
    <string name="unit_hours_short">h</string>
    <string name="unit_minutes_short">min</string>
    <string name="unit_litres_short">l</string>
    <string name="unit_millilitres_short">ml</string>
    <string name="placeholder_global_short" translatable="false">[NOT PRODUCTION] Lorem ipsum vivamus. [NOT PRODUCTION]</string>
    <string name="placeholder_global_medium" translatable="false">[NOT PRODUCTION] Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et laoreet. [NOT PRODUCTION]</string>
    <string name="placeholder_date_time" translatable="false">yyyy-MM-dd hh:mm</string>
    <string name="placeholder_emptiness">There\'s nothing here</string>
    <string name="placeholder_emptiness_temporary">There\'s nothing here yet</string>
    <string name="placeholder_emptiness_invitation">Let\'s fix this!</string>
    <string name="placeholder_username">Username</string>
    <string name="parent_schedule_not_found">No schedule set</string>
    <string name="parent_network_not_found">No network set</string>
    <string name="schedule_information">Schedule information:</string>
    <string name="schedule_each">each</string>
    <string name="list_selected">selected</string>
    <string name="pair_device_connect_success">The Bluetooth connection was successfully established.</string>
    <string name="pair_device_connect_failure">Unable to connect to the device via Bluetooth connection.</string>
    <string name="pair_device_access_success">Access to the device configuration was obtained successfully.</string>
    <string name="pair_device_access_failure">The device could not be accessed.</string>
    <string name="pair_device_network_or">OR</string>
    <string name="pair_device_network_success">The device\'s network settings have been successfully updated.</string>
    <string name="pair_device_network_failure">The device failed to update the network settings. Check the correctness of the entered data.</string>
    <string name="pair_device_success">The device pairing has been successfully completed. Now it remains to setup your new device. To continue, click "next".</string>
    <string name="status_battery_fine">High battery level</string>
    <string name="status_battery_warning">The battery is partially discharged</string>
    <string name="status_battery_defect">The battery is very low</string>
    <string name="status_water_fine">High water level</string>
    <string name="status_water_warning">The water was partially spent</string>
    <string name="status_water_defect">There is very little water</string>
    <string name="status_undefined">Status is undefined</string>
    <string name="heading_attached_devices">Attached devices:</string>
    <string name="home_greeting">Hello,</string>
    <string name="sign_in_failure">Incorrect username or password was entered.</string>
    <string name="sign_up_failure_username_used">The username is already taken.</string>
    <string name="sign_up_failure_email_used">The user with this email is already registered.</string>
    <string name="sign_failure_auth_token_not_accepted">The authorization token is not accepted.</string>
    <string name="loading_stage_permissions">Checking the available permissions.</string>
    <string name="loading_stage_permissions_failure">The application cannot work correctly due to the lack of necessary permissions. Please give the app the necessary permissions.</string>
    <string name="loading_stage_internet_connection">Checking the Internet connection.</string>
    <string name="loading_stage_internet_connection_failure">Unable to connect to the internet, please check your internet connection and retry again.</string>
    <string name="loading_stage_server_connection">Checking the connection to the server.</string>
    <string name="loading_stage_server_connection_failure">Unable to connect to the server, please retry again or come back later.</string>
    <string name="loading_stage_database_connection">Connecting to the database.</string>
    <string name="loading_stage_database_connection_failure">The connection to the internal database is required but could not be established, please try to reinstall the application.</string>
    <string name="loading_stage_auto_login">Uploading user data.</string>
    <string name="loading_stage_repository_installation">Establishing a connection with the repositories.</string>
    <string name="loading_stage_repository_installation_failure">Failed to establish connections with repositories, please restart the application.</string>
    <string name="loading_stage_data_installation">Uploading internal data.</string>
    <string name="loading_stage_data_installation_failure">Failed to upload internal data, please restart the application.</string>
    <string name="loading_stage_failure">An error occurred during the loading. Try restarting the application, if the error continues to appear, then reinstall the application.</string>
    <string name="bluetooth_failure_device_not_support">This device does not support Bluetooth. Please install the application on a device with a Bluetooth module.</string>
    <string name="bluetooth_failure_permission_not_found">The application does not have permissions to control Bluetooth. Please give the app permissions to control Bluetooth.</string>
    <string name="bluetooth_failure_permission_location_not_found">The application does not have location permissions, therefore it cannot search and connect to devices via Bluetooth. Please give the app location permissions.</string>
    <string name="bluetooth_failure_permission_location_services_not_found">The application does not have full location permissions, therefore it cannot search any devices via Bluetooth. Please give the app full location permissions.</string>
    <string name="bluetooth_failure_turned_off">Bluetooth is turned off, although it was expected that it was turned on. Please turn on Bluetooth and try again.</string>
    <string name="bluetooth_failure_turn_on">An unexpected error occurred while turning on the Bluetooth.</string>
    <string name="bluetooth_failure_scan">An unexpected error occurred while searching devices via Bluetooth.</string>
    <string name="bluetooth_connect">Establishing a connection with device </string>
    <string name="bluetooth_failure_connect">An unexpected error occurred when connecting the selected device. </string>
    <string name="bluetooth_scan">Searching devices…</string>
    <string name="bluetooth_scan_finished">Device search completed.</string>
    <string name="bluetooth_device_info">Device name: %1$s\nDevice MAC: %2$s</string>
    <string name="bluetooth_failure_transmit">The data could not be transmitted because the Bluetooth connection is not established.</string>
    <string name="manual_watering_failure_overflow">The soil moisture sensor shows a high value, additional permission is required for watering.</string>
</resources>