<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="michael.linker.rewater.ui.home.HomeFragment"
        android:label="@string/navigation_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_networks"
        android:name="michael.linker.rewater.ui.networks.NetworksFragment"
        android:label="@string/navigation_title_networks"
        tools:layout="@layout/fragment_networks" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="michael.linker.rewater.ui.devices.DevicesFragment"
        android:label="@string/navigation_title_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="michael.linker.rewater.ui.profile.ProfileFragment"
        android:label="@string/navigation_title_profile"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="michael.linker.rewater.ui.settings.SettingsFragment"
        android:label="@string/navigation_title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>