<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_navigation_networks"
    app:startDestination="@id/navigation_networks">

    <!-- Global action for the nested graph-->
    <action
        android:id="@+id/navigation_networks_global"
        app:destination="@id/navigation_networks"
        app:popUpTo="@id/navigation_networks"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/navigation_networks_add"
        android:name="michael.linker.rewater.ui.advanced.networks.view.AddNetworkFragment"
        android:label="@string/navigation_title_networks_add"
        tools:layout="@layout/fragment_networks_add">
        <action
            android:id="@+id/navigation_action_networks_add_to_networks"
            app:destination="@id/navigation_networks"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_networks_edit"
        android:name="michael.linker.rewater.ui.advanced.networks.view.EditNetworkFragment"
        android:label="@string/navigation_title_networks_edit"
        tools:layout="@layout/fragment_networks_edit">
        <action
            android:id="@+id/navigation_action_networks_edit_to_networks"
            app:destination="@id/navigation_networks"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_networks_history"
        android:name="michael.linker.rewater.ui.advanced.networks.view.NetworksHistoryFragment"
        android:label="@string/navigation_title_networks_history"
        tools:layout="@layout/fragment_networks_history">
        <action
            android:id="@+id/navigation_action_networks_history_to_networks"
            app:destination="@id/navigation_networks"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_networks"
        android:name="michael.linker.rewater.ui.advanced.networks.view.NetworksFragment"
        android:label="@string/navigation_title_networks"
        tools:layout="@layout/fragment_networks">
        <action
            android:id="@+id/navigation_action_networks_to_networks_add"
            app:destination="@id/navigation_networks_add"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/navigation_action_networks_to_networks_edit"
            app:destination="@id/navigation_networks_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/navigation_action_networks_to_networks_history"
            app:destination="@id/navigation_networks_history"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/navigation_action_networks_add_to_schedules"
            app:destination="@id/root_navigation_schedules"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <include app:graph="@navigation/schedules" />
</navigation>